# Non_Linear_Photonic_Sampler

./: .gitignore  README.md  pyproject.toml
Tests/MNIST/: mnist_gan.py  train.py
Tests/PET_CT_Scans/: train_gan_2.py  train_vae.py
Tests/PET_CT_Scans/utils/: evaluate.py  view_image.py
Tests/QM9/: layers.py  models.py  plot_fcd.py  train.py
bosonsampler/: __init__.py  __version__.py  core.py  precompute_distributions.py
data/Tests/PET_CT_Scans/: gan_module.py  train_gan.py  vae_module.py
data/Tests/QM9/: dataset.py  evaluate.py  molecular_metrics.py  plot.py  sparse_molecular_dataset.py  utils.py
data/Tests/plotting tools/: plot_csv.py  plot_csv_CT.py  plot_csv_CT_2.py
data/wandb/: latest-run
